--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -16,27 +16,41 @@ ul.header-menu {
 }
 
 li.header-item {
+  color: white;
   display: grid;
-  font-size: 120%;
+  font-size: 140%;
   position: relative;
   cursor: pointer;
   text-decoration: none;
+  &:before {
+    content: ""; /*疑似要素の中身は空（記述は必須）*/
+    position: absolute; /*子要素として疑似要素を固定*/
+    left: 0; /*長さはテキストの両端まで*/
+    right: 0; /*長さはテキストの両端まで*/
+    bottom: -5px;  /*線の上下位置*/
+    width: 100%; /*線の長さ*/
+    height: 2px; /*線の太さ*/
+    background-color: #9e9c9c; /*線の色*/
+    transform: scale(0, 1); /*横方向に0状態から全体まで線を入れる*/
+    transform-origin: center; /*中央を起点にアニメーション*/
+    transition: transform .2s; /*アニメーションの時間*/
+  }
+  &:hover:before {
+    transform: scaleX(1);
+  }
 }
 
-li.header-item:before {
-  content: ""; /*疑似要素の中身は空（記述は必須）*/
-  position: absolute; /*子要素として疑似要素を固定*/
-  left: 0; /*長さはテキストの両端まで*/
-  right: 0; /*長さはテキストの両端まで*/
-  bottom: -5px;  /*線の上下位置*/
-  width: 100%; /*線の長さ*/
-  height: 2px; /*線の太さ*/
-  background-color: #9e9c9c; /*線の色*/
-  transform: scale(0, 1); /*横方向に0状態から全体まで線を入れる*/
-  transform-origin: center; /*中央を起点にアニメーション*/
-  transition: transform .2s; /*アニメーションの時間*/
+span.header-text {
+  color: white;
+  &:link {
+    color: white;
+  }
+  &:visited {
+    color: white;
+  }
 }
 
-li.header-item:hover:before {
-  transform: scaleX(1);
+a.link {
+  text-decoration: none;
+  color: #fff;
 }
