feat: attach css to skills page

--- a/src/App.scss
+++ b/src/App.scss
@@ -37,3 +37,10 @@
   align-items: center;
   justify-content: center;
 }
+
+div.main {
+  background-color: #111;
+  width: auto;
+  padding: 2% 10%;
+  display: grid;
+}
