--- a/src/components/SkillsFrame.scss
+++ b/src/components/SkillsFrame.scss
@@ -1,5 +1,5 @@
 div.skill-frame {
   display: grid;
-  grid-template-columns: 1fr auto auto;
+  grid-template-columns: auto auto auto;
   grid-gap: 3%;
 }
