--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -15,7 +15,7 @@ ul.header-menu {
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
-li.header-item {
+li.current-page {
   color: white;
   display: grid;
   font-size: 140%;
@@ -31,6 +31,12 @@ li.header-item {
     width: 100%; /*線の長さ*/
     height: 2px; /*線の太さ*/
     background-color: #9e9c9c; /*線の色*/
+  }
+}
+
+li.header-item {
+  @extend .current-page;
+  &:before {
     transform: scale(0, 1); /*横方向に0状態から全体まで線を入れる*/
     transform-origin: center; /*中央を起点にアニメーション*/
     transition: transform .2s; /*アニメーションの時間*/
