feat: create animation for transition

--- a/src/App.scss
+++ b/src/App.scss
@@ -44,3 +44,22 @@ div.main {
   padding: 2% 10%;
   display: grid;
 }
+
+div.page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  animation: fadeIn 1s ease 0s 1 normal;
+  width: 100%;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateX(-150px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
