--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -1,11 +1,19 @@
 a.contact-button {
   width: 10%;
   height: 10%;
-  float: left;
   padding-left: 2%;
   padding-right: 2%;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  justify-content: center;
 }
 img.contact-link {
-  width: 100%;
-  height: 100%;
+  height: 3em;
+  vertical-align: middle;
+}
+span.contact-text {
+  color: white;
+  font-size: 1.4em;
+  margin-left: 10%;
 }
