feat: attach animation

--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -3,6 +3,7 @@ a.contact-button {
   height: 10%;
   padding-left: 2%;
   padding-right: 2%;
+  margin: 2% 0;
   display: flex;
   align-items: center;
   text-decoration: none;
