--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -1,5 +1,5 @@
 a.contact-button {
-  width: 10%;
+  width: 100%;
   height: 10%;
   padding-left: 2%;
   padding-right: 2%;
@@ -7,7 +7,7 @@ a.contact-button {
   display: flex;
   align-items: center;
   text-decoration: none;
-  justify-content: center;
+  justify-content: space-between;
 }
 img.contact-link {
   height: 3em;
