--- a/src/App.scss
+++ b/src/App.scss
@@ -43,7 +43,8 @@ div.main {
   width: auto;
   padding: 2% 10%;
   display: grid;
-  animation: worksIn 1s ease 0s 1 normal;
+  animation: worksIn 0.6s ease-out 0s 1 normal;
+  transform-origin: top;
 }
 
 div.page {
