--- a/src/components/Work.scss
+++ b/src/components/Work.scss
@@ -7,7 +7,8 @@ div.work-card {
   flex-direction: column;
   flex-basis: 40%;
   min-width: 40%;
-  animation: worksIn 1s ease 0s 1 normal;
+  animation: worksIn 0.6s ease-out 0s 1 normal;
+  transform-origin: top;
 }
 
 h3.work-title {
@@ -22,10 +23,10 @@ p.work-text {
 @keyframes worksIn {
   0% {
     opacity: 0;
-    transform: translateZ(150px) rotateX(90deg);
+    transform: scaleY(0);
   }
   100% {
     opacity: 1;
-    transform: translateZ(0) rotateX(0);
+    transform: scaleY(100%);
   }
 }
