fix: pages height

--- a/src/pages/TopPage.scss
+++ b/src/pages/TopPage.scss
@@ -1,6 +1,12 @@
+div.top-page {
+  display: flex;
+  padding: 5rem 0;
+  justify-content: center;
+}
+
 img.top-page-icon {
-  width: 40%;
-  height: 40%;
+  width: 50%;
+  height: 50%;
   border-radius: 50%;
 }
 
