--- a/src/pages/ContactPage.scss
+++ b/src/pages/ContactPage.scss
@@ -6,5 +6,6 @@ div.contact-main {
   background-color: #111;
   width: auto;
   padding: 2% 10%;
-  animation: worksIn 1s ease 0s 1 normal;
+  animation: worksIn 0.6s ease-out 0s 1 normal;
+  transform-origin: top;
 }
