--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -15,6 +15,7 @@ div.header {
 
     .icon {
       height: 2.5rem;
+      width: 2.5rem;
       border-radius: 50%;
       margin-right: 1rem;
     }
