--- a/src/components/Work.scss
+++ b/src/components/Work.scss
@@ -7,7 +7,7 @@ div.work-card {
   flex-direction: column;
   flex-basis: 40%;
   min-width: 40%;
-  animation: worksIn 0.6s ease-out 0s 1 normal;
+  animation: fadeIn 0.6s ease 0s 1 normal;
   transform-origin: top;
 }
 
