fix: over scrolling in top page

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,6 @@
 
 .App-main {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -60,4 +59,9 @@ div.page {
   to {
     opacity: 1;
   }
+}
+
+.root {
+  background-color: #282c34;
+  min-height: 100vh;
 }
