--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -26,7 +26,7 @@ ul.header-menu {
   list-style-type: none;
   color: white;
   text-align: center;
-  padding: 0 0 2% 0;
+  padding: 0 0 2%;
   margin: 0 1rem;
   display: grid;
   grid-gap: 1rem;
@@ -34,42 +34,51 @@ ul.header-menu {
   overflow-x: auto;
 }
 
-li.current-page {
+%current-page {
   color: white;
   display: grid;
   font-size: 140%;
   position: relative;
   cursor: pointer;
   text-decoration: none;
-  &:before {
-    content: ""; /*疑似要素の中身は空（記述は必須）*/
-    position: absolute; /*子要素として疑似要素を固定*/
-    left: 0; /*長さはテキストの両端まで*/
-    right: 0; /*長さはテキストの両端まで*/
-    bottom: -5px;  /*線の上下位置*/
-    width: 100%; /*線の長さ*/
-    height: 2px; /*線の太さ*/
-    background-color: #9e9c9c; /*線の色*/
+
+  &::before {
+    content: ""; /* 疑似要素の中身は空（記述は必須） */
+    position: absolute; /* 子要素として疑似要素を固定 */
+    left: 0; /* 長さはテキストの両端まで */
+    right: 0; /* 長さはテキストの両端まで */
+    bottom: -5px;  /* 線の上下位置 */
+    width: 100%; /* 線の長さ */
+    height: 2px; /* 線の太さ */
+    background-color: #9e9c9c; /* 線の色 */
   }
 }
 
+li.current-page {
+  @extend %current-page;
+}
+
 li.header-item {
-  @extend .current-page;
-  &:before {
-    transform: scale(0, 1); /*横方向に0状態から全体まで線を入れる*/
-    transform-origin: center; /*中央を起点にアニメーション*/
-    transition: transform .2s; /*アニメーションの時間*/
+  @extend %current-page;
+
+  &::before {
+    transform: scale(0, 1); /* 横方向に0状態から全体まで線を入れる */
+    transform-origin: center; /* 中央を起点にアニメーション */
+    transition: transform .2s; /* アニメーションの時間 */
   }
-  &:hover:before {
+
+  &:hover::before {
     transform: scaleX(1);
   }
 }
 
 span.header-text {
   color: white;
+
   &:link {
     color: white;
   }
+
   &:visited {
     color: white;
   }
