--- a/src/pages/ContactPage.scss
+++ b/src/pages/ContactPage.scss
@@ -1,11 +1,12 @@
 div.contact-main {
-  @extend .main !optional;
+  @extend %main !optional;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #111;
   width: auto;
   padding: 2% 10%;
-  animation: fadeIn 0.6s ease 0s 1 normal;
+  animation: fade-in 0.6s ease 0s 1 normal;
   transform-origin: top;
 }
